k8s/istio/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: mtls-strict-dev
  namespace: dev
spec:
  mtls:
    mode: STRICT
