k8s/istio/kiali-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kiali-ingress
  namespace: istio-system
spec:
  ingressClassName: traefik
  rules:
    - host: kiali.tthong.dev
      http:
        paths:
          - backend:
              service:
                name: kiali
                port:
                  number: 20001
            path: /
            pathType: Prefix
