k8s/istio/virtual-service-order.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: order-to-tax-retry
  namespace: dev
spec:
  hosts:
    - tax
  http:
    - match:
        - sourceLabels:
            app.kubernetes.io/instance: order-dev
      route:
        - destination:
            host: tax
            port:
              number: 80
      retries:
        attempts: 3
        perTryTimeout: 2s
        retryOn: connect-failure,refused-stream,unavailable,503
      timeout: 10s
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: order-to-cart-retry
  namespace: dev
spec:
  hosts:
    - cart
  http:
    - match:
        - sourceLabels:
            app.kubernetes.io/instance: order-dev
      route:
        - destination:
            host: cart
            port:
              number: 80
      retries:
        attempts: 2
        perTryTimeout: 2s
        retryOn: connect-failure,refused-stream,unavailable,503
      timeout: 10s
